<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="description">Show battery, time, date and much more on your wallpaper</string>
    <string name="wallpaper">Info Wallpaper</string>
    <string name="liveInfoSettings">Settings</string>
    <string name="defaultTemperature">F</string>
   	<string name="Clear_title">Clear</string>
   	<string name="Cloudy_title">Cloudy</string> 
	<string name="Fog_title">Fog</string>
	<string name="Haze_title">Haze</string>
	<string name="LightRain_title">Light Rain</string>
	<string name="MostlyCloudy_title">Mostly Cloudy</string>
   	<string name="MostlySunny_title">Mostly Sunny</string>
	<string name="Overcast_title">Overcast</string>
	<string name="PartlyCloudy_title">Partly Cloudy</string>
	<string name="Rain_title">Rain</string>
	<string name="RainShowers_title">Rain Showers</string>
	<string name="Showers_title">Showers</string>
	<string name="Thunderstorm_title">Thunderstorm</string>
	<string name="ChanceofShowers_title">Chance of Showers</string>
	<string name="ChanceofStorm_title">Chance of Storm</string>
	<string name="ChanceofSnow_title">Chance of Snow</string>
	<string name="ChanceofRain_title">Chance of Rain</string>
	<string name="PartlySunny_title">Partly Sunny</string>
	<string name="ScatteredShowers_title">Scattered Showers</string>
	<string name="Sunny_title">Sunny</string>
	<string name="iconLabel">Icons</string>
	<string name="hideOnLockTitle">Hide text when locked</string>
	<string name="iconSizeLabel">Icon Size</string>
	<string name="backgroundImageTitle">Background Image</string>
	<string name="backgroundColorTitle">Background Color</string>
	<string name="backgroundUseImageTitle">Use Image</string>
	<string name="backgroundUseImageSummary">Set the background image</string>
	<string name="backgroundSingleColorTitle">Use Single Color</string>
	<string name="backgroundSingleColorSummary">Choose a color to use for the background</string>
	<string name="backgroundTwoColorTitle">Use Two Colors</string>
	<string name="backgroundTwoColorSummary">Select two colors that will fade from the first at the top to the second at the bottom</string>
	<string name="removeBackgroundImageTitle">Remove Image</string>
	<string name="clearBackgroundColorsTitle">Clear Colors</string>
	<string name="customizeInfoTitle">Customize Info</string>
	<string name="weatherLocationTitle">Location (city, country/state)</string>
	<string name="weatherUpdateTitle">Minutes between updates</string>
	<string name="weatherTempTitle">Show Temperature in..</string>
	<string name="enterNameTitle">Enter a name for configuration</string>
	<string name="saveFailed">Failed to save file to memory card. Please try again later.</string>
	<string name="updateWeatherTitle">Update Weather (requires internet)</string>
	<string name="colorPickerTitle">Pick a Color</string>
	<string name="imagePickerTitle">Select Image</string>
	<string name="advancedInfosTitle">General Settings</string>
	<string name="weatherSettingsTitle">Weather Settings</string>
	<string name="weatherSettingsSummary">Settings for displaying weather information</string>
	<string name="loadFromWeb">Website</string>
	<string name="loadFromPhone">Memory</string>
	<string name="showSmsGmailWhenZeroTitle">Show SMS/Gmail when 0</string>
	<string name="selectConfigurationTitle">Select a configuration</string>
	<string name="failedReadConfig">Failed to read file</string>
	<string name="failedGetList">Could not find any files.</string>
	<string name="loadingMessage">Loading..</string>
	<string name="defaultDateFormat">#MM/#dd/#yyyy</string>
	<string name="defaultTimeFormat">#hh:#mm</string>
	<string name="defaultString">Customize your screen in the Settings</string>
	<string name="defaultString1">This is just a sample text!</string>
	<string name="defaultString2">To add your own info</string>
	<string name="defaultString3">go to Settings and choose</string>
	<string name="defaultString4">Add Item.</string>
	<string name="textRotationTitle">Text Rotation</string>
	<string name="failedUpdateInfo">Failed to save info</string>
	<string name="failedRemoveInfo">Failed to remove info</string>
	<string name="colorTitle">Color</string>
	<string name="redTitle">Red</string>
	<string name="greenTitle">Green</string>
	<string name="blueTitle">Blue</string>
	<string name="textPositionX">X</string>
	<string name="textPositionY">Y</string>
	<string name="transparencyTitle">Transparency</string>
	<string name="buttonSetColor">Set Color</string>
	<string name="buttonCancel">Cancel</string>
	<string name="colorPreview">Color Preview</string>
	<string name="addPresetTitle">Add Preset</string>
	<string name="presetTitle">Presets</string>
	<string name="setFontTitle">Set Font</string>
	<string name="loadFromTitle">Load from..</string>
	<string name="customizeErrorMessage">You forgot to add what info to show</string>
	<string name="sampleTitle">Sample</string>
	<string name="removedBackgroundImageMsg">No image used!</string>
	<string name="removedBackgroundColorsMsg">Colors cleared!</string>
	<string name="setSizeTitle">Set Size</string>
	<string name="setFontPropTitle">Font Family and Size</string>
	<string name="openDialogTitle">Open Dialog</string>
	<string name="setColorTitle">Set Color</string>
	<string name="setFontAndSizeTitle">Set Font and Size</string>
	<string name="setAlignmentTitle">Set Alignment</string>
	<string name="setShadowTitle">Set Shadow</string>
	<string name="useBackdropTitle">Set Backdrop</string>
	<string name="useShadowTitle">Set Shadow</string>
	<string name="orderLabelTitle">Order (items drawn low to high)</string>
	<string name="setShadowColorTitle">Set Shadow Color</string>
	<string name="setBackdropColorTitle">Set Backdrop Color</string>
	<string name="setBackdropPaddingTitle">Set Backdrop Padding</string>
	<string name="setBackdropCornerRadiusTitle">Set Backdrop Corner Radius</string>
	<string name="previewText">Preview Text</string>
	<string name="alignLeftTitle">Left</string>
	<string name="alignCenterTitle">Center</string>
	<string name="alignRightTitle">Right</string>
	<string name="pickItemTitle">Pick one</string>
	<string name="saveTitle">Save</string>
	<string name="cancelTitle">Cancel</string>
	<string name="doneTitle">Done</string>
	<string name="addTitle">Add</string>
	<string name="infoTitle">Info</string>
	<string name="addInfoTitle">Add Info</string>
	<string name="addInfoSummary">Customize the look and info of a new item</string>
	<string name="editInfoTitle">Edit Info</string>
	<string name="editInfoSummary">Customize the look and info of an existing item</string>
	<string name="removeInfoTitle">Remove Info</string>
	<string name="removeInfoSummary">Remove an existing item</string>
	<string name="positionInfosTitle">Position Infos</string>
	<string name="positionInfosSummary">Position your items by dragging the text on the screen</string>
	<string name="saveLoadTitle">Save/Load Configuration</string>
	<string name="saveCurrentConfigurationTitle">Save</string>
	<string name="saveCurrentConfigurationSummary">Save your current configuration to memory</string>
	<string name="loadConfigurationTitle">Load</string>
	<string name="loadConfigurationSummary">Load a configuration from your phone\'s memory card</string>
	<string name="miscCategoryTitle">More..</string>
	<string name="showHelpTitle">Instructions</string>
	<string name="showHelpSummary">Show instructions for how to use Info Wallpaper</string>
	<string name="websiteTitle">Visit website</string>
	<string name="websiteSummary">Download backgrounds, ask questions, leave comments, or add feature requests</string>
	<string name="feedbackTitle">Feedback</string>
	<string name="feedbackSummary">Please rate and/or write a comment on Android Market for this app</string>
	<string name="numberAsTextTitle">Display numbers as text</string>
	<string name="noTextCaseTitle">None</string>
	<string name="upperCaseTitle">Upper Case</string>
	<string name="lowerCaseTitle">Lower Case</string>
	<string name="textCaseTitle">Text case</string>
	<string name="onScreenTitle">Show on screen</string>
	<string name="allScreens">All</string>
</resources>
