<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	android:title="@string/liveInfoSettings" 
	android:key="liveInfoSettings"
	android:layout="@layout/settings">
		<PreferenceCategory
			android:key="backgroundImageCategory"
			android:title="@string/backgroundImageTitle">
			<Preference
				android:key="backgroundImage"
				android:title="@string/backgroundUseImageTitle"
				android:summary="@string/backgroundUseImageSummary"
			/>
			<Preference
				android:key="removeBackgroundImage"
				android:title="@string/removeBackgroundImageTitle"
			/>
		</PreferenceCategory>
		<PreferenceCategory
			android:key="backgroundColorCategory"
			android:title="@string/backgroundColorTitle">
			<Preference
				android:key="backgroundSingleColor"
				android:title="@string/backgroundSingleColorTitle"
				android:summary = "@string/backgroundSingleColorSummary"
			/>
			<Preference
				android:key="backgroundTwoColors"
				android:title="@string/backgroundTwoColorTitle"
				android:summary = "@string/backgroundTwoColorSummary"
			/>
			<Preference
				android:key="clearBackgroundColors"
				android:title="@string/clearBackgroundColorsTitle"
			/>			
		</PreferenceCategory>
		<PreferenceCategory
			android:key="infoCategory"
			android:title="@string/infoTitle">
			<Preference
				android:key="addInfo"
				android:title="@string/addInfoTitle"
				android:summary="@string/addInfoSummary"
			/>
			<Preference
				android:key="editInfo"
				android:title="@string/editInfoTitle"
				android:summary="@string/editInfoSummary"
			/>
			<Preference
				android:key="removeInfo"
				android:title="@string/removeInfoTitle"
				android:summary="@string/removeInfoSummary"
			/>
			<Preference
				android:key="positionInfos"
				android:title="@string/positionInfosTitle"
				android:summary="@string/positionInfosSummary"
			/>
		</PreferenceCategory>
		<PreferenceCategory
			android:key="advancedInfosCategory"
			android:title="@string/advancedInfosTitle">
			<CheckBoxPreference
				android:key="hideOnLockSetting"
				android:title="@string/hideOnLockTitle"
			/>
			<Preference
				android:key="weatherSettings"
				android:title="@string/weatherSettingsTitle"
				android:summary="@string/weatherSettingsSummary"
			/>
		</PreferenceCategory>
		<PreferenceCategory
			android:key="saveLoadCategory"
			android:title="@string/saveLoadTitle">
			<Preference
				android:key="saveCurrentConfiguration"
				android:title="@string/saveCurrentConfigurationTitle"
				android:summary="@string/saveCurrentConfigurationSummary"
			/>
			<Preference
				android:key="loadConfiguration"
				android:title="@string/loadConfigurationTitle"
				android:summary="@string/loadConfigurationSummary"
			/>
		</PreferenceCategory>
		<PreferenceCategory
			android:key="miscCategory"
			android:title="@string/miscCategoryTitle">
			<Preference
				android:key="showHelp"
				android:title="@string/showHelpTitle"
				android:summary="@string/showHelpSummary"
			/>
			<Preference
	   			android:key="toWebsite"
	   			android:title="@string/websiteTitle"
	   			android:summary="@string/websiteSummary"
			/>
			<Preference
	   			android:key="leaveFeedback"
	   			android:title="@string/feedbackTitle"
	   			android:summary="@string/feedbackSummary"
			/>
		</PreferenceCategory>
</PreferenceScreen>