<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
	android:id="@+id/infoScrollView" 
	android:layout_width="fill_parent" 
	android:layout_height="fill_parent"
	android:minHeight="420dp"
	android:minWidth="320dp"
	xmlns:android="http://schemas.android.com/apk/res/android">
	<LinearLayout
		android:id="@+id/infoLayout"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:orientation="vertical">
		<LinearLayout
			android:id="@+id/formatLayout"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">
			<EditText 
				android:id="@+id/infoFormat" 
				android:inputType="textNoSuggestions"
				android:layout_width="fill_parent" 
				android:lines="1"
				android:text="" 
				android:layout_height="wrap_content">
			</EditText>
		</LinearLayout>
		<LinearLayout
			android:id="@+id/insertPresetLayout"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">
			<TextView
				android:text="@string/presetTitle"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
			/>
			<Spinner 
				android:id="@+id/presetSpinner" 
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content">
			</Spinner>
			<Button 
				android:text="@string/addTitle" 
				android:id="@+id/addPreset" 
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content">
			</Button>
		</LinearLayout>
		<LinearLayout
			android:id="@+id/addInfoTextLayout"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">
			<TextView
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:text="@string/setFontPropTitle">
			</TextView>
			<Button 
				android:id="@+id/setFontPropButton" 
				android:layout_height="wrap_content" 
				android:text="@string/openDialogTitle" 
				android:layout_width="fill_parent"
				android:layout_weight="1">
			</Button>
		</LinearLayout>
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">
			<TextView
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:text="@string/setColorTitle">
			</TextView>
		</LinearLayout>
		<LinearLayout
			android:id="@+id/addInfoColorLayout"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">
			<Button 
				android:id="@+id/setTextColor" 
				android:layout_height="wrap_content" 
				android:text="@string/openDialogTitle" 
				android:layout_width="fill_parent"
				android:layout_weight="1">
			</Button>
			<TextView
				android:id="@+id/textColorPreview"
				android:text=""
				android:background="#ffffff"
				android:layout_height="fill_parent"
				android:layout_width="fill_parent"
				android:layout_weight="1"
			/>
		</LinearLayout>
		<LinearLayout
			android:id="@+id/addInfoPositionLayout"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">
			<TextView
				android:paddingLeft="5px"
				android:id="@+id/textPosX"
				android:minWidth="60sp"
				android:text="@string/textPositionX"
				android:layout_height="fill_parent"
				android:layout_width="wrap_content"
			/>
			<EditText
				android:text="50"
				android:maxLength="3" 
				android:inputType="number"
				android:id="@+id/textXInput" 
				android:minWidth="60sp"
				android:layout_width="wrap_content" 
				android:layout_height="fill_parent">
			</EditText>
			<TextView
				android:paddingLeft="5px"
				android:id="@+id/textPosY"
				android:minWidth="60sp"
				android:text="@string/textPositionY"
				android:layout_height="fill_parent"
				android:layout_width="wrap_content"
			/>
			<EditText 
				android:text="50"
				android:maxLength="3" 
				android:inputType="number"
				android:id="@+id/textYInput" 
				android:minWidth="60sp"
				android:layout_width="wrap_content" 
				android:layout_height="fill_parent">
			</EditText>
		</LinearLayout>
		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content">
			<TextView
				android:text="@string/orderLabelTitle"
				android:layout_width="wrap_content"
				android:layout_height="fill_parent" 
			/>
			<EditText
				android:id="@+id/orderInput"
				android:singleLine="true"
				android:layout_width="wrap_content"
				android:layout_height="fill_parent"
				android:max="3"
				android:minWidth="80sp"
			/>
		</LinearLayout>
		<TextView
			android:text="@string/setAlignmentTitle"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
		/>
		<RadioGroup 
			android:id="@+id/alignText" 
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content">
			<RadioButton 
				android:id="@+id/alignTextLeft" 
				android:text="@string/alignLeftTitle" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content">
			</RadioButton>
			<RadioButton 
				android:id="@+id/alignTextCenter" 
				android:text="@string/alignCenterTitle" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content">
			</RadioButton>
			<RadioButton 
				android:id="@+id/alignTextRight" 
				android:text="@string/alignRightTitle" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content">
			</RadioButton>
		</RadioGroup>
		<LinearLayout
			android:id="@+id/textRotationLayout"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">
			<TextView
				android:text="@string/textRotationTitle"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
			/>
			<Spinner 
				android:id="@+id/textRotationSpinner" 
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content">
			</Spinner>
		</LinearLayout>
		<LinearLayout
			android:id="@+id/addInfoShadowLayout"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">
			<CheckBox 
				android:text="@string/useShadowTitle" 
				android:id="@+id/useShadow" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content">
			</CheckBox>
		</LinearLayout>
		<TextView
			android:text="@string/textCaseTitle"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
		/>
		<RadioGroup 
			android:id="@+id/textCaseGroup" 
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content">
			<RadioButton 
				android:id="@+id/noTextCase" 
				android:text="@string/noTextCaseTitle" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content">
			</RadioButton>
			<RadioButton 
				android:id="@+id/upperCase" 
				android:text="@string/upperCaseTitle" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content">
			</RadioButton>
			<RadioButton 
				android:id="@+id/lowerCase" 
				android:text="@string/lowerCaseTitle" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content">
			</RadioButton>
		</RadioGroup>
		<LinearLayout
			android:id="@+id/onScreenLayout"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">
			<TextView
				android:text="@string/onScreenTitle"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
			/>
			<Spinner 
				android:id="@+id/onScreenSpinner" 
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content">
			</Spinner>
		</LinearLayout>
		<LinearLayout
			android:id="@+id/addInfoNumbersAsTextLayout"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">
			<CheckBox 
				android:text="@string/numberAsTextTitle" 
				android:id="@+id/numbersAsText" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content">
			</CheckBox>
		</LinearLayout>
		<LinearLayout
			android:id="@+id/addInfoButtonsLayout"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">
			<Button 
				android:text="@string/doneTitle" 
				android:id="@+id/infoButtonDone" 
				android:layout_weight="1"
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content">
			</Button>
			<Button 
				android:text="@string/buttonCancel" 
				android:id="@+id/infoButtonCancel" 
				android:layout_weight="1"
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content">
			</Button>
		</LinearLayout>
	</LinearLayout>
</ScrollView>

