<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:minHeight="420dp"
	android:minWidth="320dp">
	<LinearLayout   
		android:layout_width="fill_parent" 
		android:orientation="vertical" 
		android:layout_height="fill_parent">
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">
			<CheckBox
				android:id="@+id/updateWeather"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:checked="false"
				android:layout_weight="1"
			/>
			<TextView
				android:text="@string/updateWeatherTitle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
			/>
		</LinearLayout>
		<TextView
			android:id="@+id/weatherLocationTitle"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/weatherLocationTitle"
			android:layout_weight="1"
		/>
		<EditText
			android:id="@+id/weatherLocationInput"
			android:singleLine="true"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
		/>
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">
			<TextView
				android:id="@+id/weatherUpdateTitle"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/weatherUpdateTitle"
			/>
			<EditText
				android:id="@+id/weatherUpdateInput"
				android:inputType="number"
				android:minWidth="80dp"
				android:singleLine="true"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
			/>
		</LinearLayout>
		<TextView
			android:id="@+id/weatherTempTitle"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/weatherTempTitle"
		/>
		<RadioGroup 
			android:id="@+id/tempRadios" 
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content">
			<RadioButton 
				android:id="@+id/tempC" 
				android:text="Celsius" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content">
			</RadioButton>
			<RadioButton 
				android:id="@+id/tempF" 
				android:text="Fahrenheit" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content">
			</RadioButton>
		</RadioGroup>
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/iconLabel">
		</TextView>
		<Spinner
			android:id="@+id/iconSetList"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content">
		</Spinner>
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/iconSizeLabel">
		</TextView>
		<LinearLayout
			android:id="@+id/iconSizeLayout"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">
			<SeekBar
				android:id="@+id/iconSizeBar"
				android:max="256"
				android:progress="100"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1">
			</SeekBar>
			<TextView
				android:id="@+id/iconSizeText"
				android:layout_width="wrap_content"
				android:minWidth="80dp"
				android:textSize="24dp"
				android:paddingLeft="5dp"
				android:paddingBottom="20dp"
				android:layout_height="wrap_content"
				android:text="100">
			</TextView>
		</LinearLayout>
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">
			<Button
				android:id="@+id/weatherSave"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/saveTitle">
			</Button>
			<Button
				android:id="@+id/weatherCancel"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/cancelTitle">
			</Button>
		</LinearLayout>
	</LinearLayout>
</ScrollView>