<ScrollView
	android:layout_width="fill_parent" 
	android:layout_height="fill_parent"
	android:minHeight="420dp"
	android:minWidth="320dp"
	xmlns:android="http://schemas.android.com/apk/res/android">
	<RelativeLayout 
		android:id="@+id/sizeDialog" 
		android:layout_width="fill_parent" 
		android:layout_height="fill_parent"
		android:minHeight="420dp">
		<LinearLayout
			android:key="@+id/sizeDialogLayout"
			android:orientation="vertical"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_alignParentTop="true">
			<TextView
				android:key="@+id/setFontTitleKey"
				android:text="@string/setFontTitle"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
			/>
			<Spinner 
				android:id="@+id/fontSpinner" 
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content">
			</Spinner>
			<TextView
				android:id="@+id/setSizeTitleKey"
				android:text="@string/setSizeTitle"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
			/>
			<LinearLayout
				android:orientation="horizontal"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:id="@+id/sizeBarLayout">
				<SeekBar 
					android:id="@+id/sizeDialogBar" 
					android:layout_height="wrap_content" 
					android:layout_width="fill_parent"
					android:padding="5px"
					android:max="250"
					android:progress="80"
					android:layout_weight="1">
				</SeekBar>
				<TextView 
					android:layout_width="wrap_content" 
					android:layout_weight="1"
					android:text="80"
					android:minWidth="120sp"
					android:padding="5dp"
					android:maxLength="3" 
					android:textSize="24sp"
					android:layout_below="@id/sizeDialogBar"
					android:id="@+id/editTextSizeInput" 
					android:layout_height="wrap_content">
				</TextView>
			</LinearLayout>
			<TextView 
				android:layout_width="wrap_content" 
				android:id="@+id/sampleText" 
				android:ellipsize="marquee"
				android:singleLine="true"
				android:layout_centerVertical="true" 
				android:layout_height="wrap_content" 
				android:text="@string/sampleTitle">
			</TextView>
		</LinearLayout>
		<LinearLayout
			android:layout_alignParentBottom="true"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">
			<Button 
				android:layout_weight="1"
				android:text="@string/doneTitle" 
				android:layout_width="wrap_content" 
				android:id="@+id/saveSizeDialogButton" 
				android:layout_height="wrap_content">
			</Button>
			<Button 
				android:layout_weight="1"
				android:text="@string/cancelTitle" 
				android:layout_width="wrap_content" 
				android:layout_alignParentBottom="true"
				android:layout_alignParentRight="true" 
				android:id="@+id/cancelSizeDialogButton" 
				android:layout_height="wrap_content">
			</Button>
		</LinearLayout>
	</RelativeLayout>
</ScrollView>