<ScrollView 
	android:id="@+id/infoScrollView" 
	android:layout_width="fill_parent" 
	android:layout_height="fill_parent"
	android:minHeight="420dp"
	android:minWidth="320dp"
	xmlns:android="http://schemas.android.com/apk/res/android">
	<LinearLayout
		android:orientation="vertical"
		android:id="@+id/colorPickerLayout"
		android:layout_width="fill_parent" 
		android:layout_height="fill_parent">
		<LinearLayout 
			android:paddingTop="20dp"
			android:id="@+id/colorLayout"
			android:layout_alignParentTop="true"
			android:orientation="horizontal"
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content">
			<TextView 
				android:text="FFFFFF"
				android:maxLength="6" 
				android:padding="5dp"
				android:textSize="24sp"
				android:id="@+id/htmlColorInput" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content">
			</TextView>
			<TextView 
				android:text="" 
				android:id="@+id/colorPreview" 
				android:background="#ffff0000"
				android:layout_width="fill_parent"
				android:layout_height="fill_parent">
			</TextView>
		</LinearLayout>
		<LinearLayout 
			android:id="@+id/redTextLayout"
			android:layout_below="@id/colorLayout"
			android:orientation="horizontal"
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content">
			<TextView 
				android:text="@string/redTitle" 
				android:layout_width="fill_parent" 
				android:layout_height="fill_parent">
			</TextView>
		</LinearLayout>
		<LinearLayout 
			android:id="@+id/redLayout"
			android:layout_below="@id/redTextLayout"
			android:orientation="horizontal"
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content">
			<SeekBar 
				android:id="@+id/seekBarRed" 
				android:max="255"
				android:progress="128"
				android:layout_weight="1"
				android:padding="5dp"
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content">
			</SeekBar>
			<TextView 
				android:text="128"
				android:maxLength="3" 
				android:padding="5dp"
				android:textSize="24sp"
				android:id="@+id/redInput" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content">
			</TextView>
		</LinearLayout>
		<LinearLayout 
			android:id="@+id/greenTextLayout"
			android:layout_below="@id/redLayout"
			android:orientation="horizontal"
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content">
			<TextView 
				android:text="@string/greenTitle" 
				android:layout_width="fill_parent" 
				android:layout_height="fill_parent">
			</TextView>
		</LinearLayout>
		<LinearLayout 
			android:layout_below="@id/greenTextLayout"
			android:id="@+id/greenLayout"
			android:orientation="horizontal"
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content">
			<SeekBar 
				android:id="@+id/seekBarGreen" 
				android:max="255"
				android:progress="128"
				android:layout_weight="1"
				android:padding="5dp"
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content">
			</SeekBar>
			<TextView 
				android:text="128"
				android:maxLength="3" 
				android:padding="5dp"
				android:textSize="24sp"
				android:id="@+id/greenInput" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content">
			</TextView>
		</LinearLayout>
		<LinearLayout 
			android:layout_below="@id/greenLayout"
			android:id="@+id/blueTextLayout"
			android:orientation="horizontal"
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content">
			<TextView 
				android:text="@string/blueTitle" 
				android:layout_width="fill_parent" 
				android:layout_height="fill_parent">
			</TextView>
		</LinearLayout>
		<LinearLayout 
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content" 
			android:orientation="horizontal"
			android:id="@+id/blueLayout">
			<SeekBar 
				android:max="255" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content" 
				android:id="@+id/seekBarBlue" 
				android:padding="5dp" 
				android:layout_weight="1" 
				android:progress="128">
			</SeekBar>
			<TextView 
				android:layout_height="wrap_content" 
				android:text="128" 
				android:padding="5dp"
				android:textSize="24sp"
				android:maxLength="3" 
				android:layout_width="wrap_content" 
				android:id="@+id/blueInput">
			</TextView>
		</LinearLayout>
		<LinearLayout 
			android:layout_below="@id/blueLayout"
			android:id="@+id/transparencyTextLayout"
			android:orientation="horizontal"
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content">
			<TextView 
				android:text="@string/transparencyTitle" 
				android:layout_width="fill_parent" 
				android:layout_height="fill_parent">
			</TextView>
		</LinearLayout>
		<LinearLayout 
			android:layout_below="@id/transparencyTextLayout"
			android:id="@+id/transparencyLayout"
			android:orientation="horizontal"
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content">
			<SeekBar 
				android:id="@+id/seekBarTransparency" 
				android:max="255"
				android:progress="255"
				android:layout_weight="1"
				android:padding="5dp"
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content">
			</SeekBar>
			<TextView 
				android:text="255"
				android:padding="5dp"
				android:textSize="24sp"
				android:maxLength="3" 
				android:id="@+id/transparencyInput" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content">
			</TextView>
		</LinearLayout>
		<LinearLayout  
			android:id="@+id/buttonLayout"
			android:orientation="horizontal"
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content">
			<Button 
				android:text="@string/buttonSetColor" 
				android:id="@+id/buttonSetColor" 
				android:layout_weight="1"
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content">
			</Button>
			<Button 
				android:text="@string/buttonCancel" 
				android:id="@+id/buttonCancel" 
				android:layout_weight="1"
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content">
			</Button>
		</LinearLayout>
</LinearLayout>
</ScrollView>